--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "@popperjs/core": "^2.9.2",
     "@vue/cli": "^4.5.13",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
     "bootstrap": "5.0.0",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
-    "vue-router": "^3.2.0",
     "vue-cookies": "^1.7.4",
-    "vuex": "^3.4.0",
-    "bcrypt": "^5.0.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
