--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
   "name": "neon",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode development",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "@popperjs/core": "^2.9.2",
     "@vue/cli": "^4.5.13",
     "axios": "^0.21.1",
-    "bcrypt": "^5.0.0",
     "bootstrap": "5.0.0",
+    "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "vue": "^2.6.11",
+    "vue": "^3.1.5",
     "vue-axios": "^3.2.4",
     "vue-cookies": "^1.7.4",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-router": "4.0.0",
+    "vuex": "4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.1.5",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass-loader": "^8.0.2"
   },
   "browserslist": [
     "> 1%",
