--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "core-js": "^3.6.5",
     "vue": "^3.1.5",
     "vue-axios": "^3.2.4",
-    "vue-cookies": "^1.7.4",
     "vue-router": "4.0.0",
+    "vue3-cookies": "^1.0.1",
     "vuex": "4.0.0"
   },
   "devDependencies": {
