--- a/package.json
+++ b/package.json
@@ -9,27 +9,20 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "@popperjs/core": "^2.9.2",
-    "@vue/cli": "^4.5.13",
+    "@vue/compat": "^3.1.0",
     "axios": "^0.21.1",
-    "bootstrap": "5.0.0",
-    "bootstrap-icons": "^1.5.0",
-    "core-js": "^3.6.5",
+    "bootstrap": "^5.0.2",
     "vue": "^3.1.5",
     "vue-axios": "^3.2.4",
-    "vue-router": "4.0.0",
-    "vue3-cookies": "^1.0.1",
-    "vuex": "4.0.0"
+    "vue-router": "^4.0.10"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.1.5",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass": "^1.36.0",
+    "sass-loader": "^10.2.0"
   },
   "browserslist": [
     "> 1%",
