--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "@popperjs/core": "^2.9.2",
     "@vue/compat": "^3.1.0",
-    "core-js": "^3.6.5",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "core-js": "^3.6.5",
     "vue": "^3.1.5",
     "vue-axios": "^3.2.4",
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
+    "@googlemaps/js-api-loader": "^1.12.1",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.1.5",
     "sass": "^1.36.0",
